plang/testing/logs/false-incorrect/70/program70.p.p
fe :- bL7 (c (e (BT) EUGoA (hVoT1 (Wy4tI) (Ep)) WAD) wzlQ JF r) (W).
? (n UPv (oXe) (dqM BpJ (QI) qX); (bn2q (SSids) (JK) nT); oQM).



